@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PTYTextView.m,v 1.34 2003-02-27 00:23:45 yfabian Exp $
+// $Id: PTYTextView.m,v 1.35 2003-02-27 19:53:09 yfabian Exp $
 /*
  **  PTYTextView.m
  **
@@ -234,6 +234,7 @@
     if(dataSource != nil)
     {
 	int numLines, i, lineOffset;
+        int y=[dataSource cursorY]-1+[dataSource topLines];
 	NSAttributedString *aLine;
 	NSRect aRect;
         float halfLine;
@@ -257,8 +258,30 @@
 	    if(aLine == nil)
 	    {
 		//NSLog(@"Got a nil line...");
+                ;
             }else {
-                [aLine drawInRect: aRect];
+                if (i+lineOffset==y) {
+                    // show the cursor in the line array
+                    NSMutableAttributedString *s=[[NSMutableAttributedString alloc] initWithAttributedString:aLine];
+                    NSMutableDictionary *dic;
+                    NSColor *fg, *bg;
+                    int idx;
+            
+                    idx=[dataSource getIndex:[dataSource cursorX]-1 y:[dataSource cursorY]-1];
+                    if(idx >= [aLine length])
+                        [s appendAttributedString:[dataSource defaultAttrString:@" "]];
+                    // reverse the video on the position where the cursor is supposed to be shown.
+                    dic=[NSMutableDictionary dictionaryWithDictionary: [s attributesAtIndex:idx effectiveRange:nil]];
+                    fg=[dic objectForKey:NSBackgroundColorAttributeName];
+                    bg=[dic objectForKey:NSForegroundColorAttributeName];
+                    //        NSLog(@"set fg=%@\nbg=%@",fg,bg);
+                    [dic setObject:bg forKey:NSBackgroundColorAttributeName];
+                    [dic setObject:fg forKey:NSForegroundColorAttributeName];
+                    [s setAttributes:dic range:NSMakeRange(idx,1)];
+                    [s drawInRect: aRect];
+                    [s release];
+                }
+                else [aLine drawInRect: aRect];
             }
             //NSLog(@"line %d[%@]: %f",i + lineOffset, [aLine string], aRect.origin.y);
             aRect.origin.y += lineHeight;
